--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
-{
-    "java.debug.settings.onBuildFailureProceed": true
-}
+
+  "java.configuration.runtimes": [
+    {
+      "name": "JavaSE-1.8",
+      "path": "/path/to/jdk-8",
+    },
+    {
+      "name": "JavaSE-11",
+      "path": "/path/to/jdk-11",
+    },
+    {
+      "name": "JavaSE-21",
+      "path": "C:\\Program Files\\Java\\jdk-21",
+      "default": true
+    },
+  ]
